# Algorithms

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
Allocators/: LinearAllocator.cpp  PoolAllocator.cpp
Caching/: FIFO.cpp  LRU.cpp
ComputationalGeometry/: BresenhamsLine.cpp  RamerDouglasPeucker.cpp  ScanLineMethod.cpp
Cryptography/: CaesarCipher.cpp
DataStructure/: BinaryTree.cpp  LinkedList.cpp  Queue.cpp  Stack.cpp
DataStructure/Queue/: Queue.c  Queue.cpp
DataStructure/Stack/: Stack  Stack.c  Stack.cpp
DataStructures/: AVLTree.cpp  BinaryHeap.cpp  BinaryTree.cpp  CircularBuffer.cpp  DisjointSetUnion.cpp  HashTableWithOpenAddressing.cpp  HashTableWithSeparateChaining.cpp  InvertedIndex.cpp  LinkedList.cpp  PrefixTree.cpp  Queue.cpp  SegmentTree.cpp  Stack.cpp  XORLinkedList.cpp
DynamicProgramming/: ExchangeOfCoins.cpp  Fibonacci.cpp
Graphs/: BFS.cpp  DFS.cpp  Dijkstra.cpp  TopologicalSort.cpp
Math/: GCD.cpp  MathVectors.cpp  Matrices.cpp  Power.cpp  SearchSimpleFactors.cpp  Vectors.cpp
Multithreading/: PingPong.cpp  ProducerAndConsumer.cpp
Other/: ReversalForwardList.cpp
Others/: EratosthenesSieve.cpp  EuclideanAlgorithm.cpp  MatrixReverseDiagonals.cpp  MaximumAmoundOfSubarrays.cpp  MaximumPathsNumber.cpp  QueensPuzzle.cpp  TomSawyerSence.cpp
Search/: BinarySearch.cpp  LinearSearch.cpp  TernarySearch.cpp
Search/BinarySearch/: BinarySearch.c  BinarySearch.cpp
Search/LinearSearch/: LinearSearch.c  LinearSearch.cpp
SetOperations/: DifferenceBetweenOrderedSets.cpp  GenerationOfAllPermutationsFromSet.cpp  GenerationOfAllSubsetsOfTheSet.cpp  IntersectionOfTheOrderedSets.cpp  SymmetricDifferenceOfOrderedSets.cpp  UnionOfTheOrderedSets.cpp
SmartPointers/: AutoPtr.cpp  SharedPtr.cpp  UniquePtr.cpp
Sorting/: BubbleSorting.cpp  BubleSorting.cpp  BucketSorting.cpp  CountingSorting.cpp  InsertionSorting.cpp  MergeSorting.cpp  QuickSorting.cpp  SelectionSorting.cpp  ShellSorting.cpp  StupidSorting.cpp
Sorting/BubbleSorting/: BubbleSorting.c  BubbleSorting.cpp
Sorting/InsertionSorting/: InsertionSorting.c  InsertionSorting.cpp
Sorting/QuickSorting/: QuickSorting.c  QuickSorting.cpp  Sort  Sorting
Sorting/SelectionSorting/: SelectionSorting.c
